добавил хедер и часть мэйна

--- a/index.html
+++ b/index.html
@@ -5,8 +5,47 @@
     <title>HTML Academy: Девайс</title>
   </head>
   <body>
-
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS, уровень 1</a>».</p>
+    <header class="main-header">
+      <nav class="main-navigation">
+        <a class="logo-device">
+        <img src="http://placehold.it/150x100">
+        </a>
+        <ul class="site-navigation">
+            <li><a href="catalog.html">КАТАЛОГ ТОВАРОВ</a></li>
+            <li><a href="delivery.html">ДОСТАВКА</li>
+            <li><a href="garanty.html">ГАРАНТИЯ</a></li>
+            <li><a href="contacts.html">КОНТАКТЫ</a></li>
+        </ul>
+        <ul class="user-navigation">
+          <li class="search-site">Поиск по сайту</li>
+          <li class="login-user">Войти</li>
+          <li class="compare-items">Сравнить</li> 
+          <li class="shopping-basket">Корзина</li>
+        </ul>
+      </nav>
+    </header>
+    <main class="conteiner-1">
+    <h1 class="vsually-hidden">Device Shop</h1>
+      <section class="info-block">
+        <ul class="info-about-us">
+          <h2>О нас</h2>
+          <li class="info-text-1">
+            <p>Огромный выбор гаджетов не оствит равнодушным гика, который есть в каждом из нас</p>
+            <p>Мы можем доставить ваш товар в самые отдаленные точки России. DEVICE работает
+              со многими транспортными компаниями:
+            </p>
+            <ul class="transport-companies">
+              <li><a href="delovielines.html"></a>Деловые Линии</li>
+              <li><a href="autotraiding.html"></a>Автотрейдинг</li>
+              <li><a href="jeldorexp.html"></a>Желдорэкспедиция</li>
+            </ul>
+          </li>
+        </ul>
+        <a class="button-about-us" href="about_us.html">подробнее о нас</a>
+      </section>
+      
+    </main>
+  
 
   </body>
 </html>
