--- a/index.html
+++ b/index.html
@@ -43,10 +43,13 @@
         </ul>
         <a class="button-about-us" href="about_us.html">подробнее о нас</a>
       </section>
+    <section class="contacts">
       
+
+    </section>
     </main>
     <footer class="Main-footer">
-      
+
     </footer>
 
   </body>
