контакты без списка

--- a/index.html
+++ b/index.html
@@ -44,8 +44,13 @@
         <a class="button-about-us" href="about_us.html">подробнее о нас</a>
       </section>
     <section class="contacts">
-      
-
+      <h2>Контакты</h2>
+      <p class="info-text-2">Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете,
+        проверить работоспосбность покупки на месте. Всякое бывает.</p>
+      <a class="map-nav">
+        <img src="http://placehold.it/150x100" href="map.html">
+      </a>
+      <a class="button-contacs" href="contacts.html">Напишите нам</a> 
     </section>
     </main>
     <footer class="Main-footer">
