--- a/index.html
+++ b/index.html
@@ -6,54 +6,55 @@
   </head>
   <body>
     <header class="main-header">
-      <nav class="main-navigation">
+      <nav class="main-nav">
         <a class="logo-device">
-        <img src="http://placehold.it/150x100">
+          <img src="http://placehold.it/150x100">
         </a>
-        <ul class="site-navigation">
-            <li><a href="catalog.html">КАТАЛОГ ТОВАРОВ</a></li>
-            <li><a href="delivery.html">ДОСТАВКА</li>
-            <li><a href="garanty.html">ГАРАНТИЯ</a></li>
-            <li><a href="contacts.html">КОНТАКТЫ</a></li>
+        <ul class="site-nav">
+            <li><a class="site-nav-item" href="#">Каталог Товаров</a></li>
+            <li><a class="site-nav-item" href="#">Доставка</li>
+            <li><a class="site-nav-item" href="#">Гарантия</a></li>
+            <li><a class="site-nav-item" href="#">Контакты</a></li>
         </ul>
-        <ul class="user-navigation">
-          <li class="search-site">Поиск по сайту</li>
-          <li class="login-user">Войти</li>
-          <li class="compare-items">Сравнить</li> 
-          <li class="shopping-basket">Корзина</li>
+        <ul class="user-nav">
+          <li class="user-nav-item">Поиск по сайту</li>
+          <li class="user-nav-item">Войти</li>
+          <li class="user-nav-item">Сравнить</li> 
+          <li class="user-nav-item">Корзина</li>
         </ul>
       </nav>
     </header>
-    <main class="conteiner-1">
-    <h1 class="vsually-hidden">Device Shop</h1>
+    
+    <main class="container">
+    <h1 class="visually-hidden">Device Shop</h1>
       <section class="info-block">
         <ul class="info-about-us">
           <h2>О нас</h2>
-          <li class="info-text-1">
+          <li class="info-about-us-text">
             <p>Огромный выбор гаджетов не оствит равнодушным гика, который есть в каждом из нас</p>
             <p>Мы можем доставить ваш товар в самые отдаленные точки России. DEVICE работает
               со многими транспортными компаниями:
             </p>
             <ul class="transport-companies">
-              <li><a href="delovielines.html"></a>Деловые Линии</li>
-              <li><a href="autotraiding.html"></a>Автотрейдинг</li>
-              <li><a href="jeldorexp.html"></a>Желдорэкспедиция</li>
+              <li><a class="transport-companies-items" href="#"></a>Деловые Линии</li>
+              <li><a class="transport-companies-items" href="#"></a>Автотрейдинг</li>
+              <li><a class="transport-companies-items" href="#"></a>Желдорэкспедиция</li>
             </ul>
           </li>
         </ul>
-        <a class="button-about-us" href="about_us.html">подробнее о нас</a>
+        <a class="button-about-us" href="#">подробнее о нас</a>
       </section>
-    <section class="contacts">
+    <section class="contacts-text">
       <h2>Контакты</h2>
-      <p class="info-text-2">Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете,
+        <p class="contacts-text-info">Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете,
         проверить работоспосбность покупки на месте. Всякое бывает.</p>
-      <a class="map-nav">
-        <img src="http://placehold.it/150x100" href="map.html">
-      </a>
-      <a class="button-contacs" href="contacts.html">Напишите нам</a> 
+        <a class="contacts-map" href="#">
+          <img src="http://placehold.it/150x100">
+        </a>
+      <a class="button-contacts-text" href="#">Напишите нам</a> 
     </section>
     </main>
-    <footer class="Main-footer">
+    <footer class="main-footer">
 
     </footer>
 
