титульная и католог страницы, с корректировками

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <header class="main-header">
       <nav class="main-nav">
         <a class="logo-device-header">
-          <img src="http://placehold.it/150x100">
+          <img alt="лого девайс" src="http://placehold.it/150x100">
         </a>
         <!--элемент для формы поиска-->
         <a class="search-site">Поиск по сайту</a>
@@ -49,7 +49,7 @@
               <p class="contacts-text">Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете,
                     проверить работоспосбность покупки на месте. Всякое бывает.</p>
               <a class="contacts-map" href="#">
-                <img src="http://placehold.it/150x100">
+                <img alt="карта местонахождения" src="http://placehold.it/150x100">
               </a>     
               <a class="button contacts-link" href="#">Напишите нам</a>
           </section>
@@ -59,10 +59,10 @@
     <footer class="main-footer">
       <nav class="nav-footer">
         <a class="logo-device-footer" href="#">
-          <img src="http://placehold.it/150x100">
+          <img alt="лого девайса" src="http://placehold.it/150x100">
         </a>
         <a class="logo-htmla" href="#">
-          <img src="http://placehold.it/150x100">
+          <img alt="лого HTML Academy" src="http://placehold.it/150x100">
         </a>
         <p class="adress-device">г. Москва, ул. Строителей 15</p>
         <p class="phone-device">тел. +7(495) 495-95-95</p>
@@ -72,9 +72,9 @@
           <li><a class="site-nav-item-footer" href="#">Гарантия</a></li>
         </ul>
         <ul class="user-nav-footer">
-          <li><a class="user-nav-item-footer" href="#">Войти</a></li>
-          <li><a class="user-nav-item-footer" href="#">Сравнить</a></li>
-          <li><a class="user-nav-item-footer" href="#">Корзина</a></li>
+          <li class="user-nav-footer-item"><a class="button-input" href="#">Войти</a></li>
+          <li class="user-nav-footer-item"><a class="button-comparison" href="#">Сравнить</a></li>
+          <li class="user-nav-footer-item"><a class="button-busket" href="#">Корзина</a></li>
         </ul>
       </nav>
       <div class="fotter-social">
@@ -85,7 +85,7 @@
         </ul>
       </div>
       <a class="logo-line">
-        <img src="http://placehold.it/150x100">
+        <img alt="лого-линия" src="http://placehold.it/150x100">
       </a>
     </footer>
 
