ссылки на транспортные компании

--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
                             со многими транспортными компаниями:
                 </p>
                 <ul class="about-us-transport-companies">
-                  <li class="about-us-transport-companies-items">Деловые Линии</li>
-                  <li class="about-us-transport-companies-items">Автотрейдинг</li>
-                  <li class="about-us-transport-companies-items">Желдорэкспедиция</li>
+                  <li class="about-us-transport-companies-items"><a href="#">Деловые Линии</a></li>
+                  <li class="about-us-transport-companies-items"><a href="#">Автотрейдинг</a></li>
+                  <li class="about-us-transport-companies-items"><a href="#">Желдорэкспедиция</a></li>
                 </ul>
               <a class="button about-us" href="#">подробнее о нас</a>
           </section>
