--- a/index.html
+++ b/index.html
@@ -8,22 +8,22 @@
     
     <header class="main-header">
       <nav class="main-nav">
-        <a class="logo-device-header">
+        <a class="main-logo">
           <img alt="лого девайс" src="http://placehold.it/150x100">
         </a>
         <!--элемент для формы поиска-->
         <a class="search-site">Поиск по сайту</a>
 
         <ul class="site-nav">
-            <li><a class="site-nav-item" href="#">Каталог Товаров</a></li>
-            <li><a class="site-nav-item" href="#">Доставка</li>
-            <li><a class="site-nav-item" href="#">Гарантия</a></li>
-            <li><a class="site-nav-item" href="#">Контакты</a></li>
+          <li class="site-nav-item"><a href="#">Каталог Товаров</a></li>
+          <li class="site-nav-item"><a href="#">Доставка</li>
+          <li class="site-nav-item"><a href="#">Гарантия</a></li>
+          <li class="site-nav-item"><a href="#">Контакты</a></li>
         </ul>
         <ul class="user-nav">
-          <li class="user-nav-item"><a class="button-input" href="#">Войти</a></li>
-          <li class="user-nav-item"><a class="button-comparison" href="#">Сравнить</a></li> 
-          <li class="user-nav-item"><a class="button-busket" href="#">Корзина</a></li>
+          <li class="user-nav-item"><a href="#">Войти</a></li>
+          <li class="user-nav-item"><a href="#">Сравнить</a></li> 
+          <li class="user-nav-item"><a href="#">Корзина</a></li>
         </ul>
       </nav>
     </header>
@@ -38,9 +38,9 @@
                             со многими транспортными компаниями:
                 </p>
                 <ul class="about-us-transport-companies">
-                  <li class="about-us-transport-companies-items"><a href="#">Деловые Линии</a></li>
-                  <li class="about-us-transport-companies-items"><a href="#">Автотрейдинг</a></li>
-                  <li class="about-us-transport-companies-items"><a href="#">Желдорэкспедиция</a></li>
+                  <li class="about-us-transport-companies-item"><a href="#">Деловые Линии</a></li>
+                  <li class="about-us-transport-companies-item"><a href="#">Автотрейдинг</a></li>
+                  <li class="about-us-transport-companies-item"><a href="#">Желдорэкспедиция</a></li>
                 </ul>
               <a class="button about-us" href="#">подробнее о нас</a>
           </section>
@@ -57,36 +57,38 @@
     </main>
     
     <footer class="main-footer">
-      <nav class="nav-footer">
-        <a class="logo-device-footer" href="#">
-          <img alt="лого девайса" src="http://placehold.it/150x100">
+      <div class="footer-header">
+        <a class="logo-footer" href="#">
+          <img alt="лого девайс" src="http://placehold.it/150x100">
         </a>
-        <a class="logo-htmla" href="#">
-          <img alt="лого HTML Academy" src="http://placehold.it/150x100">
-        </a>
+        <ul class="user-nav-footer">
+          <li class="user-nav-footer-item"><a href="#">Войти</a></li>
+          <li class="user-nav-footer-item"><a href="#">Сравнить</a></li>
+          <li class="user-nav-footer-item"><a href="#">Корзина</a></li>
+        </ul>
+      </div>
+      <div class="footer-main">
         <p class="adress-device">г. Москва, ул. Строителей 15</p>
         <p class="phone-device">тел. +7(495) 495-95-95</p>
         <ul class="site-nav-footer">
-          <li><a class="site-nav-item-footer" href="#">Каталог Товаров</a></li>
-          <li><a class="site-nav-item-footer" href="#">Доставка</li>
-          <li><a class="site-nav-item-footer" href="#">Гарантия</a></li>
-        </ul>
-        <ul class="user-nav-footer">
-          <li class="user-nav-footer-item"><a class="button-input" href="#">Войти</a></li>
-          <li class="user-nav-footer-item"><a class="button-comparison" href="#">Сравнить</a></li>
-          <li class="user-nav-footer-item"><a class="button-busket" href="#">Корзина</a></li>
-        </ul>
-      </nav>
-      <div class="fotter-social">
-        <ul class="fotter-social-buttons">
-          <li><a class="social-button" href="#">Вконтакте</a></li>
-          <li><a class="social-button" href="#">Фейсбук</a></li>
-          <li><a class="social-button" href="#">Инстаграм</a></li>
+          <li class="site-nav-footer-item"><a href="#">Каталог Товаров</a></li>
+          <li class="site-nav-footer-item"><a href="#">Доставка</li>
+          <li class="site-nav-footer-item"><a href="#">Гарантия</a></li>
         </ul>
       </div>
-      <a class="logo-line">
-        <img alt="лого-линия" src="http://placehold.it/150x100">
-      </a>
+      <div class="footer-bottom">
+        <a class="logo-line">
+          <img alt="лого-линия" src="http://placehold.it/150x100">
+        </a>
+        <ul class="footer-social-buttons">
+          <li class="social-button"><a href="#">Вконтакте</a></li>
+          <li class="social-button"><a href="#">Фейсбук</a></li>
+          <li class="social-button"><a href="#">Инстаграм</a></li>
+        </ul>
+        <a class="logo-htmla" href="#">
+          <img alt="лого HTML Academy" src="http://placehold.it/150x100">
+        </a>
+      </div>
     </footer>
   </body>
 </html>
