--- a/catalog.html
+++ b/catalog.html
@@ -8,77 +8,64 @@
 <body>
 <header class="main-header">
   <nav class="main-nav">
-    <a class="logo-device-header">
+    <a class="logo-logo">
       <img src="http://placehold.it/150x100">
     </a>
     <!--элемент для формы поиска-->
     <a class="search-site">Поиск по сайту</a>
 
     <ul class="site-nav">
-      <li><a class="site-nav-item" href="#">Каталог Товаров</a></li>
-      <li><a class="site-nav-item" href="#">Доставка</li>
-      <li><a class="site-nav-item" href="#">Гарантия</a></li>
-      <li><a class="site-nav-item" href="#">Контакты</a></li>
+        <li class="site-nav-item"><a href="#">Каталог Товаров</a></li>
+        <li class="site-nav-item"><a href="#">Доставка</li>
+        <li class="site-nav-item"><a href="#">Гарантия</a></li>
+        <li class="site-nav-item"><a href="#">Контакты</a></li>
     </ul>
     <ul class="user-nav">
-        <li class="user-nav-item"><a class="button-user"><img alt="имя пользователя" src="http://placehold.it/150x100"></a></li>
-        <li class="user-nav-item"><a class="button-output" href="#">Выйти</a></li>
-        <li class="user-nav-item"><a class="button-comparison" href="#">Сравнить</a></li>
-        <li class="user-nav-item"><a class="button-busket" href="#">Корзина</a></li>
+        <li class="user-nav-item"><a>Имя пользователя</a></li>
+        <li class="user-nav-item"><a href="#">Выйти</a></li>
+        <li class="user-nav-item"><a href="#">Сравнить</a></li>
+        <li class="user-nav-item"><a href="#">Корзина</a></li>
     </ul>
   </nav>
 </header>
 
 <main class="container">
     <h1 class="monopods-title">Моноподы для селфи</h1>
-    <div class="catalog">
-        <div class="catalog-pages-open">
-            <ul class="catalog-pages-list">
-                <li><a href="#">Главная</a></li>
-                <li><a href="#">Каталог</a></li>
+        <ul class="catalog-pages-list">
+                <li class="catalog-page"><a href="#">Главная</a></li>
+                <li class="catalog-page"><a href="#">Каталог</a></li>
                 <li class="catalog-current-page">Моноподы для селфи</li>
-            </ul>
-
-        </div>
-
+        </ul>
         <section class="monopods">
                 <h2 class="visually-hidden">Список моноподов</h2>
                 <ul class="catalog-list">
                     <li class="catalog-item">
-                        <div class="catalog-item-menu">
                             <a class="catalog-item-image">
                             <img src="http://placehold.it/150x100" alt="Любительская палка для селфи">
                             </a>
                             <h3 class="catalog-item-title">Любительская палка селфи</h3>
                             <span class="catalog-item-price">500 руб.</span>
-                        </div>
                     </li>
                     <li class="catalog-item">
-                        <div class="catalog-item-menu">
                             <a class="catalog-item-image">
                                 <img src="http://placehold.it/150x100" alt="Профессиональня селфи-палка">
                             </a>
                             <h3 class="catalog-item-title">Профессиональная селфи-палка</h3>
                             <span class="catalog-item-price">1500 руб.</span>
-                        </div>
                     </li>
                     <li class="catalog-item">
-                        <div class="catalog-item-menu">
                             <a class="catalog-item-image">
                                 <img src="http://placehold.it/150x100" alt="Непотопляемая селфи-палка">
                             </a>
                             <h3 class="catalog-item-title">Непотопляемая селфи-палка</h3>
                             <span class="catalog-item-price">2500 руб.</span>
-                        </div>
                     </li>
                     <li class="catalog-item">
-                        <div class="catalog-item-menu">
                             <a class="catalog-item-image">
                                 <img src="http://placehold.it/150x100" alt="селфи-палка -следуй за мной-">
                             </a>
                             <h3 class="catalog-item-title">Селфи-палка "Следуй за мной"</h3>
                             <span class="catalog-item-price">4900 руб.</span>
-                        </div>
                     </li>
                 </ul>
         </section>
@@ -115,8 +102,8 @@
         </ul>
     </div>
     <div class="footer-main">
-        <p class="adress-device">г. Москва, ул. Строителей 15</p>
-        <p class="phone-device">тел. +7(495) 495-95-95</p>
+        <p class="footer-adress">г. Москва, ул. Строителей 15</p>
+        <p class="footer-phone">тел. +7(495) 495-95-95</p>
         <ul class="site-nav-footer">
             <li class="site-nav-footer-item"><a href="#">Каталог Товаров</a></li>
             <li class="site-nav-footer-item"><a href="#">Доставка</li>
@@ -132,10 +119,10 @@
             <li class="social-button"><a href="#">Фейсбук</a></li>
             <li class="social-button"><a href="#">Инстаграм</a></li>
         </ul>
-  <a class="logo-htmla" href="#">
-    <img alt="лого HTML Academy" src="http://placehold.it/150x100">
-  </a>
-</div>
+        <a class="logo-htmla" href="#">
+            <img alt="лого HTML Academy" src="http://placehold.it/150x100">
+        </a>
+    </div>
 </footer>
 </body>
 </html>
