--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
         </ul>
       </div>
       <div class="footer-main">
-        <p class="adress-device">г. Москва, ул. Строителей 15</p>
-        <p class="phone-device">тел. +7(495) 495-95-95</p>
+        <p class="footer-adress">г. Москва, ул. Строителей 15</p>
+        <p class="footer-phone">тел. +7(495) 495-95-95</p>
         <ul class="site-nav-footer">
           <li class="site-nav-footer-item"><a href="#">Каталог Товаров</a></li>
           <li class="site-nav-footer-item"><a href="#">Доставка</li>
