еще нашел ошибки((

--- a/catalog.html
+++ b/catalog.html
@@ -8,9 +8,7 @@
 <body>
 <header class="main-header">
   <nav class="main-nav">
-    <a class="logo-logo">
-      <img src="http://placehold.it/150x100">
-    </a>
+    <a class="main-logo" href="#">Device</a>
     <!--элемент для формы поиска-->
     <a class="search-site">Поиск по сайту</a>
 
@@ -32,6 +30,7 @@
 <main class="container">
     <h1 class="monopods-title">Моноподы для селфи</h1>
     <div class="catalog">    
+        
         <ul class="breadcrumbs">
                 <li class="breadcrumbs-page"><a href="#">Главная</a></li>
                 <li class="breadcrumbs-page"><a href="#">Каталог</a></li>
@@ -112,7 +111,7 @@
     </div>
     <div class="footer-bottom">
         <a class="logo-line">
-            <img alt="лого-линия" src="http://placehold.it/150x100">
+            <img alt="лого-линия" src="http://placehold.it/150x100" alt="#">
         </a>
         <ul class="footer-social-buttons">
             <li class="social-button"><a href="#">Вконтакте</a></li>
@@ -120,7 +119,7 @@
             <li class="social-button"><a href="#">Инстаграм</a></li>
         </ul>
         <a class="logo-htmla" href="#">
-            <img alt="лого HTML Academy" src="http://placehold.it/150x100">
+            <img src="http://placehold.it/150x100" alt="лого HTML Academy" >
         </a>
     </div>
 </footer>
