--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
               <p class="contacts-text">Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете,
                     проверить работоспосбность покупки на месте. Всякое бывает.</p>
               <a class="contacts-map" href="#">
-                  <img alt="карта местонахождения" src="http://placehold.it/150x100">
+                  <img src="http://placehold.it/150x100" alt="карта местонахождения" >
               </a>     
               <a class="button contacts-link" href="#">Напишите нам</a>
           </section>
@@ -75,7 +75,7 @@
       </div>
       <div class="footer-bottom">
         <a class="logo-line">
-          <img alt="лого-линия" src="http://placehold.it/150x100">
+          <img src="http://placehold.it/150x100" alt="лого-линия">
         </a>
         <ul class="footer-social-buttons">
           <li class="social-button"><a href="#">Вконтакте</a></li>
@@ -83,7 +83,7 @@
           <li class="social-button"><a href="#">Инстаграм</a></li>
         </ul>
         <a class="logo-htmla" href="#">
-          <img alt="лого HTML Academy" src="http://placehold.it/150x100">
+          <img src="http://placehold.it/150x100" alt="лого HTML Academy">
         </a>
       </div>
     </footer>
