--- a/catalog.html
+++ b/catalog.html
@@ -111,7 +111,7 @@
     </div>
     <div class="footer-bottom">
         <a class="logo-line">
-            <img alt="лого-линия" src="http://placehold.it/150x100" alt="#">
+            <img src="http://placehold.it/150x100" alt="#">
         </a>
         <ul class="footer-social-buttons">
             <li class="social-button"><a href="#">Вконтакте</a></li>
