--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     
     <main class="container">
       <h1 class="visually-hidden">Магазин Device</h1>
-        <div class="cotainer-info">
+        <div class="container-info">
           <section class="about-us">
               <h2 class="about-us-title">О нас</h2>
               <p class="about-us-text">Огромный выбор гаджетов не оствит равнодушным гика, который есть в каждом из нас</p>
