--- a/catalog.html
+++ b/catalog.html
@@ -19,7 +19,7 @@
         <li class="site-nav-item"><a href="#">Контакты</a></li>
     </ul>
     <ul class="user-nav">
-        <li class="user-nav-item"><a>Имя пользователя</a></li>
+        <li class="user-nav-item"><a>Валентин Петухов</a></li>
         <li class="user-nav-item"><a href="#">Выйти</a></li>
         <li class="user-nav-item"><a href="#">Сравнить</a></li>
         <li class="user-nav-item"><a href="#">Корзина</a></li>
@@ -31,10 +31,10 @@
     <h1 class="monopods-title">Моноподы для селфи</h1>
     <div class="catalog">    
         
-        <ul class="breadcrumbs">
+        <ul class="breadcrumbs-item">
                 <li class="breadcrumbs-page"><a href="#">Главная</a></li>
                 <li class="breadcrumbs-page"><a href="#">Каталог</a></li>
-                <li class="breadcrumbs-current-page">Моноподы для селфи</li>
+                <li class="breadcrumbs-page">Моноподы для селфи</li>
         </ul>
 
         <section class="filter">
@@ -59,31 +59,31 @@
                 <h2 class="visually-hidden">Список моноподов</h2>
                 <ul class="catalog-list">
                     <li class="catalog-item">
-                            <a class="catalog-item-image">
                             <img src="http://placehold.it/150x100" alt="Любительская палка для селфи">
+                            <a href="#">
+                            <h3 class="catalog-item-title">Любительская селфи-палка</h3>
                             </a>
-                            <h3 class="catalog-item-title"><a href="#">Любительская селфи-палка</a></h3>
                             <span class="catalog-item-price">500 руб.</span>
                     </li>
                     <li class="catalog-item">
-                            <a class="catalog-item-name">
-                                <img src="http://placehold.it/150x100" alt="Профессиональня селфи-палка">
+                            <img src="http://placehold.it/150x100" alt="Профессиональня селфи-палка">
+                            <a href="#">
+                            <h3 class="catalog-item-title">Профессиональная селфи-палка</h3>
                             </a>
-                            <h3 class="catalog-item-title"><a href="#">Профессиональная селфи-палка</a></h3>
                             <span class="catalog-item-price">1500 руб.</span>
                     </li>
                     <li class="catalog-item">
-                            <a class="catalog-item-image">
-                                <img src="http://placehold.it/150x100" alt="Непотопляемая селфи-палка">
+                            <img src="http://placehold.it/150x100" alt="Непотопляемая селфи-палка">
+                            <a href="#">
+                            <h3 class="catalog-item-title">Непотопляемая селфи-палка</h3>
                             </a>
-                            <h3 class="catalog-item-title"><a href="#">Непотопляемая селфи-палка</a></h3>
                             <span class="catalog-item-price">2500 руб.</span>
                     </li>
                     <li class="catalog-item">
-                            <a class="catalog-item-image">
-                                <img src="http://placehold.it/150x100" alt="селфи-палка-следуй за мной">
+                            <img src="http://placehold.it/150x100" alt="селфи-палка-следуй за мной">
+                            <a href="#">
+                            <h3 class="catalog-item-title">Селфи-палка "Следуй за мной"</h3>
                             </a>
-                            <h3 class="catalog-item-title"><a href="#">Селфи-палка "Следуй за мной"</a></h3>
                             <span class="catalog-item-price">4900 руб.</span>
                     </li>
                 </ul>
@@ -110,10 +110,7 @@
         </ul>
     </div>
     <div class="footer-bottom">
-        <a class="logo-line">
-            <img src="http://placehold.it/150x100" alt="#">
-        </a>
-        <ul class="footer-social-buttons">
+            <ul class="footer-social-buttons">
             <li class="social-button"><a href="#">Вконтакте</a></li>
             <li class="social-button"><a href="#">Фейсбук</a></li>
             <li class="social-button"><a href="#">Инстаграм</a></li>
