--- a/catalog.html
+++ b/catalog.html
@@ -8,7 +8,7 @@
 <body>
 <header class="main-header">
   <nav class="main-nav">
-    <a class="main-logo" href="#">Device</a>
+    <a class="main-logo" href="index.html">Device</a>
     <!--элемент для формы поиска-->
     <a class="search-site">Поиск по сайту</a>
 
@@ -60,6 +60,8 @@
                 <ul class="catalog-list">
                     <li class="catalog-item">
                             <img src="http://placehold.it/150x100" alt="Любительская палка для селфи">
+                            <a class="compare-hover" href="#">добавить к сравнению</a>
+                            <a class="in-cart-hover" href="#">в корзину</a>
                             <a href="#">
                                 <h3 class="catalog-item-title">Любительская селфи-палка</h3>
                             </a>
@@ -67,6 +69,8 @@
                     </li>
                     <li class="catalog-item">
                             <img src="http://placehold.it/150x100" alt="Профессиональня селфи-палка">
+                            <a class="compare-hover" href="#">добавить к сравнению</a>
+                            <a class="in-cart-hover" href="#">в корзину</a>
                             <a href="#">
                                 <h3 class="catalog-item-title">Профессиональная селфи-палка</h3>
                             </a>
@@ -74,6 +78,8 @@
                     </li>
                     <li class="catalog-item">
                             <img src="http://placehold.it/150x100" alt="Непотопляемая селфи-палка">
+                            <a class="compare-hover" href="#">добавить к сравнению</a>
+                            <a class="in-cart-hover" href="#">в корзину</a>
                             <a href="#">
                                 <h3 class="catalog-item-title">Непотопляемая селфи-палка</h3>
                             </a>
@@ -81,6 +87,8 @@
                     </li>
                     <li class="catalog-item">
                             <img src="http://placehold.it/150x100" alt="селфи-палка-следуй за мной">
+                            <a class="compare-hover" href="#">добавить к сравнению</a>
+                            <a class="in-cart-hover" href="#">в корзину</a>
                             <a href="#">
                                 <h3 class="catalog-item-title">Селфи-палка "Следуй за мной"</h3>
                             </a>
@@ -93,7 +101,7 @@
 
 <footer class="main-footer">
     <div class="footer-header">
-        <a class="logo-footer" href="#">Device</a>
+        <a class="logo-footer" href="index.html">Device</a>
             <ul class="user-nav-footer">
             <li class="user-nav-footer-item"><a href="#">Войти</a></li>
             <li class="user-nav-footer-item"><a href="#">Сравнить</a></li>
