ухх предварительный index.html

--- a/index.html
+++ b/index.html
@@ -39,7 +39,67 @@
     
     <main class="container">
       <h1 class="visually-hidden">Магазин Device</h1>
-        <div class="container-info">
+<!-- это слайдер, ятак понимаю он не автаматичесткий -->
+      <div class="container-gallery">
+        <section class="slide01">
+          <img src="#" alt="монопод">
+        </section>
+        <section class="slide01-text">
+          <h2 class="slide01-title">Делай селфи, как Бен Стиллер! </h2>
+          <p>Самая длинная палка для селфи доступна в нашем магазине.
+            Восемь (Восемь, Карл!) метров длиной и весом всего 5 килограмм.</p>
+        </section>
+        <a class="button monopods-link" href="#">Подробнее</a>
+        <p class="slide01-info">8,5м 5 кг Карбон</p>
+        <p class="slide01-info-description"></p>
+        <ul class="pagination-list">
+          <li class="pagination-item pagination-item-current"><a href="#"></a></li>
+          <li class="pagination-item"><a></a></li>
+          <li class="pagination-item"><a href="#"></a></li>
+      </div>
+<!-- это иконки каталогов пока без svg -->
+      <div class="container-catalog">
+        <ul class="catalog-list">
+          <li class="catalog-item"></li>
+          <li class="catalog-item"></li>
+          <li class="catalog-item"></li>
+          <li class="catalog-item"></li>
+          <li class="catalog-item"></li>
+          <li class="catalog-item"></li>
+        </ul>
+      </div>
+<!-- это так сказать меню услуг -->
+      <div class=container-services>
+        <section class="services-delivery">
+          <a class="button delivery-link">Доставка</a>
+            <h2 class="delivery">Доставка</h2>
+              <p class="delivery-text">Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно! Ведь мы
+              неплохо заработаем, поднимая его на ваш этаж.</p>
+        </section>
+        <section class="services-garanty">
+          <a class="button garanty-link">Гарантия</a>
+            <h2 class="garanty">Гарантия</h2>
+              <p class="garanty-text">Если из-за возгорания купленного у нас товара у вас сгорит дом — не переживайте, мы выдадим вам
+                  новый. Товар, не дом, конечно же.</p>
+        </section>
+        <section class="services-credit">
+          <a class="button credit-link">Кредит</a>
+            <h2 class="credit">Кредит</h2>
+              <p class="credit-text">Залезть в долговую яму стало проще! Кредитные консультанты подберут для вас наиболее выгодные
+                условия кредита. Выгодные для нашего банка, разумеется.</p>
+        </section>
+      </div>
+<!-- ну это логотипы производителей -->
+      <div class="container-logos">
+        <ul class="logos-list">
+          <li class="logos-item"></li>
+          <li class="logos-item"></li>
+          <li class="logos-item"></li>
+          <li class="logos-item"></li>
+        </ul>
+      </div>
+<!-- это наша информация -->
+      <div class="container-info">
           <section class="about-us">
               <h2 class="about-us-title">О нас</h2>
                 <p class="about-us-text">Огромный выбор гаджетов не оствит равнодушным гика, который есть в каждом из нас</p>
@@ -61,7 +121,7 @@
                 </a>     
               <a class="button contacts-link" href="#">Напишите нам</a>
           </section>
-        </div>
+      </div>
     </main>
     
     <footer class="main-footer">
