добавил кнопочки в сортинг и пагинацию

--- a/catalog.html
+++ b/catalog.html
@@ -61,7 +61,7 @@
                 </ul>
                 <a class="button filter-show" href="#">Показать</a>
         </section>
-        <!-- сортировка товара , стрелочки в конце форма или кнопочки? -->
+        <!-- сортировка товара , стрелочки в конце? форма или кнопочки? -->
         <section class="catalog-sorting">
             <h3 class="sorting-title">Сортировка:</h3>
                 <ul class="sorting-list">
@@ -69,6 +69,8 @@
                     <li class="sorting-item">По типу</li>
                     <li class="sorting-item">По популярности</li>
                 </ul>
+                <a class="button-up" href="#"></a>
+                <a class="button-down" href=""></a>
         </section>
 
         <section class="monopods">
@@ -114,13 +116,13 @@
         </section>
         <!-- пагинация каталога(новое слово выучил)) -->
         <section class="catalog-pagination">
-                <a class="button back-btn" href="#">Назад</a>
+                <a class="button-pgnt back-btn" href="#">Назад</a>
                 <ul class="pagination-list">
                     <li class="pagination-item pagination-item-current"><a>1</a></li>
                     <li class="pagination-item"><a href="#">2</a></li>
                     <li class="pagination-item"><a href="#">3</a></li>
                 </ul>
-                <a class="button frw-btn" href="#">Вперед</a>
+                <a class="button-pgnt frw-btn" href="#">Вперед</a>
         </section>
     </div>
 </main>
